@@ -235,6 +235,8 @@ Link extension with compiled executable
 Require extension and import in compiled code.
 .It Fl dll , Fl library
 Compile multiple units into a dynamic library.
+.It Fl libdir Ar DIRECTORY
+Override location of runtime library directory.
 .El
 .Pp
 Options to other passes:
